@@ -2616,3 +2616,14 @@ Version 18
 		a bit flickery though.
 	PropertyField no longer attempts to set the underlying value of sliding properties
 		when initialized.
+        Various classes now load classes dynamically using Class.forName(..., , true, 
+		Thread.currentThread.getContextClassLoader()) rather than just 
+		Class.forName(...) as is normally done.  This solves an obscure and rare 
+		bug where, if you place the mason.jar file in the Extension Classes 
+		location on your computer (such as /Library/Java/Extension/ on a Mac) 
+		rather than in the CLASSPATH, the ParameterDatabase cannot load
+                classes normally found in the CLASSPATH because it has been
+                assigned a different ClassLoader than they have.  Java's
+                class loading model is bizarre and arcane.
+	MASON handles missing JFreeCharts with aplomb now, rather than making blank
+		menu names	
